@@ -214,6 +214,7 @@ void printLink(s_link link) {
    if (link.forwardRequestFile) printf("ForwardRequestFile %s\n",link.forwardRequestFile);
    if (link.packerDef) printf("PackerDefault %s\n", link.packerDef->packer);
    else printf("PackerDefault none\n");
+   if (link.pktSize != 0) printf("pktSize - %u kb\n",link.pktSize);
    if (link.arcmailSize != 0) printf("arcmailSize - %u kb\n",link.arcmailSize);
    printf("TIC files %s\n", (link.noTIC == 0) ? "on" : "off");
    printf("forwardPkts ");
