@@ -2,6 +2,11 @@ fidoconfig 0.91
 ---------------
 
 ----- cvs ci ------
+Mon Mar 27 13:28:49 MSD 2000
+max (patch from Serguei Revtov):
+* pktsize token
+
+----- cvs ci ------
 Thu Mar 23 16:10:45 NOVT 2000
 max:
 * exit to shell after printing error when passthrough + sqush (jam, sdm) used
